manager-service-static-ip.yml
apiVersion: v1
kind: Service
metadata:
        name: agent-test
        labels:
                app: agent-test
spec:
        selector:
                app: agent-test
                tier: web
        ports:
                - port: 80
                  targetPort: 8080
        type: LoadBalancer
        loadBalancerIP: "34.97.145.249"
