manager-ingress-static-ip.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
        name: agenttest
        annotations:
                kubernates.io/ingress.global-static-ip-name: manager-static-ip
        labels:
                app: agent-test
spec:
        backend:
                serviceName: manager-backend
                servicePort: 8080
---
                
apiVersion: v1
kind: Service
metadata:
        name: manager-backend
        labels:
                app: agent-test
spec:
        type: NodePort
        selector:
                app: agent-test
                tier: web
        ports:
                - port: 8080
                  targetPort: 8080
